[package]
name = "types-kv-rkyv"
version = "0.1.0"
edition = "2024"
readme = "README.md"

authors = [
    "Databend Authors <opensource@datafuselabs.com>",
]
categories = ["algorithms", "asynchronous", "data-structures"]
description = "An OpenRaft types example using rkyv serialization"
homepage = "https://github.com/databendlabs/openraft"
keywords = ["raft", "consensus", "rkyv"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/databendlabs/openraft"

[dependencies]
openraft = { path = "../../openraft", features = ["rkyv"] }
rkyv = { version = "0.8.15" }
